cmake_minimum_required(VERSION 3.22)
project(rxz-Cpp-test)
set(CMAKE_CXX_STANDARD 14)

add_executable(P1567 P1567.cpp)
add_executable(P5082 P5082.cpp)
add_executable(P5601 P5601.cpp)
add_executable(P6685 P6685.cpp)
add_executable(P1706 P1706.cpp)
add_executable(P2043 P2043.cpp)
add_executable(P2356 P2356.cpp)
add_executable(P1615 P1615.cpp)
